--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
   href="https://fonts.googleapis.com/icon?family=Material+Icons"
 />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>React App</title>
+    <title>B-Movies</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
